2004-02-13  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Fixed compile warning
	
	* devhelp.spec.in: Updated to include the devel package
	
	* libdevhelp-1.0.pc.in: Fixed paths
	
	* src/Makefile.am: Install headers and library in the correct places.

2004-02-13  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: 
	* configure.in:
	* libdevhelp-1.0.pc.in:
	- Moved the pc file and renamed it.
	
	* NEWS:
	- Updated for 0.8
	
	* src/Makefile.am:
	* src/devhelp.pc.in:
	- Removed this pc file.

2004-02-13  Naba Kumar  <naba@gnome.org>
 
	* configure.in: 
	- Bumped version to 0.8
	- Installs libdevhelp
	
	* src/Makefile.am, src/.cvsignore, (new) src/devhelp.pc.in:
	- Installs libdevhelp header files and pkgconfig file, so that 
	  external programs can also use libdevhelp.

2003-12-14  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2003-09-15  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-06-29  Mikael Hallendal  <micke@imendio.com>

	* src/dh-main.c: include string.h, fixes warning on FreeBSD.

2003-06-29  Richard Hult  <richard@imendio.com>

	* misc/devhelp.el: 
	* misc/devhelp.vim: Add comment about -g. 

2003-06-29  Mikael Hallendal  <micke@imendio.com>

        * NEWS: Updated, missed this in the 0.7 tarball.

        * Release 0.7

	* configure.in: Bumped to 0.7
	
	* devhelp.spec.in: Updated for 0.7 and new web site.

2003-06-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (dh_window_new): Don't make the size relative to
	the resolution, that didn't work out very well.

2003-06-28  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c: 
	* (window_activate_action): Added link to project page in about dialog.

2003-06-28  Richard Hult  <richard@imendio.com>

	* src/dh-base.c (base_init_books): Use g_get_home_dir and
	g_build_filename.
	(base_sort_books, book_sort_func): Sort the toplevel list of
	books. Fixes bug #111535.
